--- a/kitty/.config/kitty/current-theme.conf
+++ b/kitty/.config/kitty/current-theme.conf
@@ -1,95 +1,80 @@
 # vim:ft=kitty
 
-## name: Base2Tone Lavender Dark
-## author: Bram de Haan (https://github.com/atelierbram)
-## license: MIT
-## upstream: https://github.com/atelierbram/Base2Tone-kitty/blob/main/themes/base2tone-lavender-dark.conf
-## blurb: duotone theme | blue lavender violet - magenta
+## name:     Catppuccin-Mocha
+## author:   Pocco81 (https://github.com/Pocco81)
+## license:  MIT
+## upstream: https://github.com/catppuccin/kitty/blob/main/mocha.conf
+## blurb:    Soothing pastel theme for the high-spirited!
 
 
-#: The basic colors
 
-foreground #9992b0
-background #201d2a
-selection_foreground #9992b0
-selection_background #2c2839
+# The basic colors
+foreground              #CDD6F4
+background              #1E1E2E
+selection_foreground    #1E1E2E
+selection_background    #F5E0DC
 
+# Cursor colors
+cursor                  #F5E0DC
+cursor_text_color       #1E1E2E
 
-#: Cursor colors
+# URL underline color when hovering with mouse
+url_color               #F5E0DC
 
-cursor #b042ff
-cursor_text_color #201d2a
+# Kitty window border colors
+active_border_color     #B4BEFE
+inactive_border_color   #6C7086
+bell_border_color       #F9E2AF
 
+# OS Window titlebar colors
+wayland_titlebar_color system
+macos_titlebar_color system
 
-#: URL underline color when hovering with mouse
+# Tab bar colors
+active_tab_foreground   #11111B
+active_tab_background   #CBA6F7
+inactive_tab_foreground #CDD6F4
+inactive_tab_background #181825
+tab_bar_background      #11111B
 
-url_color #dcd2fe
+# Colors for marks (marked text in the terminal)
+mark1_foreground #1E1E2E
+mark1_background #B4BEFE
+mark2_foreground #1E1E2E
+mark2_background #CBA6F7
+mark3_foreground #1E1E2E
+mark3_background #74C7EC
 
+# The 16 terminal colors
 
-#: kitty window border colors and terminal bell colors
+# black
+color0 #45475A
+color8 #585B70
 
-active_border_color #4b455f
-inactive_border_color #201d2a
-bell_border_color #7451e6
-visual_bell_color none
+# red
+color1 #F38BA8
+color9 #F38BA8
 
+# green
+color2  #A6E3A1
+color10 #A6E3A1
 
-#: OS Window titlebar colors
+# yellow
+color3  #F9E2AF
+color11 #F9E2AF
 
-wayland_titlebar_color #2c2839
-macos_titlebar_color #2c2839
+# blue
+color4  #89B4FA
+color12 #89B4FA
 
+# magenta
+color5  #F5C2E7
+color13 #F5C2E7
 
-#: Tab bar colors
+# cyan
+color6  #94E2D5
+color14 #94E2D5
 
-active_tab_foreground #faf8fc
-active_tab_background #201d2a
-inactive_tab_foreground #b2a4bc
-inactive_tab_background #2c2839
-tab_bar_background #2c2839
-tab_bar_margin_color none
-
-
-#: Colors for marks (marked text in the terminal)
-
-mark1_foreground #201d2a
-mark1_background #8363ee
-mark2_foreground #201d2a
-mark2_background #8e8198
-mark3_foreground #201d2a
-mark3_background #b957ff
-
-
-#: The basic 16 colors
-
-#: black
-color0 #201d2a
-color8 #625a7c
-
-#: red
-color1 #9375f5
-color9 #dba8ff
-
-#: green
-color2 #d294ff
-color10 #2c2839
-
-#: yellow
-color3 #ecd1ff
-color11 #4b455f
-
-#: blue
-color4 #a286fd
-color12 #6e658b
-
-#: magenta
-color5 #d294ff
-color13 #dcd2fe
-
-#: cyan
-color6 #b5a0fe
-color14 #ca80ff
-
-#: white
-color7 #9992b0
-color15 #efebff
+# white
+color7  #BAC2DE
+color15 #A6ADC8
