--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -32,6 +32,6 @@ inactive_tab_font_style normal
 
 
 # BEGIN_KITTY_THEME
-# Base2Tone Lavender Dark
+# Catppuccin-Mocha
 include current-theme.conf
 # END_KITTY_THEME
