idk at this point

--- a/hyprland/.config/hypr/keybinds.conf
+++ b/hyprland/.config/hypr/keybinds.conf
@@ -10,6 +10,7 @@ $terminal = kitty
 $fileManager = dolphin
 $menu = wofi --show run
 $browser = firefox
+$editor = $terminal -e nvim
 
 
 bind = $mainMod, RETURN, exec, $terminal
