--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -1,7 +1,7 @@
-# Create your files separately and then link them to this file like this:
-# source = ~/.config/hypr/myColors.conf
-source = ~/.config/hypr/env.conf
 source = ~/.config/hypr/keybinds.conf
+source = ~/.config/hypr/env.conf
+source = ~/.config/hypr/themes/mocha.conf
+
 
 ################
 ### MONITORS ###
@@ -20,8 +20,9 @@ monitor=,preferred,auto,auto
 # Set programs that you use
 $terminal = kitty
 $fileManager = dolphin
-$menu = wofi --show run
-
+$menu = wofi --show drun
+$browser = firefox
+$editor = $terminal -e nvim
 
 #################
 ### AUTOSTART ###
@@ -32,19 +33,8 @@ $menu = wofi --show run
 
 # exec-once = $terminal
 # exec-once = nm-applet &
-exec-once = waybar & swww-daemon & firefox
-exec-once = swww ~/Pictures/wallpapers/vangogh-galaxy.png
+# exec-once = waybar & hyprpaper & firefox
 
-
-#############################
-### ENVIRONMENT VARIABLES ###
-#############################
-
-# See https://wiki.hyprland.org/Configuring/Environment-variables/
-
-cursor {
-    no_hardware_cursors = true
-}
 
 #####################
 ### LOOK AND FEEL ###
@@ -57,11 +47,11 @@ general {
     gaps_in = 5
     gaps_out = 20
 
-    border_size = 5
+    border_size = 4
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
-    col.active_border = rgba(7451e6ee) rgba(ca80ffee) 45deg
-    col.inactive_border = rgba(625a7caa)
+    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
+    col.inactive_border = rgba(595959aa)
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
     resize_on_border = false
@@ -69,12 +59,12 @@ general {
     # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
     allow_tearing = false
 
-    layout = master
+    layout = dwindle
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
 decoration {
-    rounding = 7
+    rounding = 5
 
     # Change transparency of focused and unfocused windows
     active_opacity = 1.0
@@ -88,7 +78,7 @@ decoration {
     # https://wiki.hyprland.org/Configuring/Variables/#blur
     blur {
         enabled = true
-        size = 1
+        size = 3
         passes = 1
 
         vibrancy = 0.1696
@@ -98,8 +88,11 @@ decoration {
 # https://wiki.hyprland.org/Configuring/Variables/#animations
 animations {
     enabled = true
+
     # Default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
+
     bezier = myBezier, 0.05, 0.9, 0.1, 1.05
+
     animation = windows, 1, 7, myBezier
     animation = windowsOut, 1, 7, default, popin 80%
     animation = border, 1, 10, default
@@ -107,6 +100,19 @@ animations {
     animation = fade, 1, 7, default
     animation = workspaces, 1, 6, default
 }
+
+# Ref https://wiki.hyprland.org/Configuring/Workspace-Rules/
+# "Smart gaps" / "No gaps when only"
+# uncomment all if you wish to use that.
+# workspace = w[t1], gapsout:0, gapsin:0
+# workspace = w[tg1], gapsout:0, gapsin:0
+# workspace = f[1], gapsout:0, gapsin:0
+# windowrulev2 = bordersize 0, floating:0, onworkspace:w[t1]
+# windowrulev2 = rounding 0, floating:0, onworkspace:w[t1]
+# windowrulev2 = bordersize 0, floating:0, onworkspace:w[tg1]
+# windowrulev2 = rounding 0, floating:0, onworkspace:w[tg1]
+# windowrulev2 = bordersize 0, floating:0, onworkspace:f[1]
+# windowrulev2 = rounding 0, floating:0, onworkspace:f[1]
 
 # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
 dwindle {
@@ -121,8 +127,8 @@ master {
 
 # https://wiki.hyprland.org/Configuring/Variables/#misc
 misc {
-    force_default_wallpaper = 1 # Set to 0 or 1 to disable the anime mascot wallpapers
-    disable_hyprland_logo = true # If true disables the random hyprland logo / anime girl background. :(
+    force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
+    disable_hyprland_logo = false # If true disables the random hyprland logo / anime girl background. :(
 }
 
 
@@ -132,10 +138,10 @@ misc {
 
 # https://wiki.hyprland.org/Configuring/Variables/#input
 input {
-    kb_layout = us, tr
+    kb_layout = us,tr
     kb_variant =
     kb_model =
-    kb_options = grp:alt_shift_toggle
+    kb_options = grp:alt_shift_toggle, ctrl:nocaps
     kb_rules =
 
     follow_mouse = 1
@@ -158,6 +164,7 @@ device {
     name = epic-mouse-v1
     sensitivity = -0.5
 }
+
 
 ##############################
 ### WINDOWS AND WORKSPACES ###
