--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -35,40 +35,24 @@ $editor = $terminal -e nvim
 # exec-once = nm-applet &
 # exec-once = waybar & hyprpaper & firefox
 
-
-#####################
-### LOOK AND FEEL ###
-#####################
-
-# Refer to https://wiki.hyprland.org/Configuring/Variables/
-
-# https://wiki.hyprland.org/Configuring/Variables/#general
 general {
     gaps_in = 5
     gaps_out = 20
-
     border_size = 4
-
-    # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
-    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
-    col.inactive_border = rgba(595959aa)
-
-    # Set to true enable resizing windows by clicking and dragging on borders and gaps
+    col.active_border = $mauve $pink 45deg
+    col.inactive_border = $base
     resize_on_border = false
-
-    # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
     allow_tearing = false
-
     layout = dwindle
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
 decoration {
-    rounding = 5
 
-    # Change transparency of focused and unfocused windows
     active_opacity = 1.0
     inactive_opacity = 1.0
+
+    rounding = 5
 
     drop_shadow = true
     shadow_range = 4
@@ -78,7 +62,7 @@ decoration {
     # https://wiki.hyprland.org/Configuring/Variables/#blur
     blur {
         enabled = true
-        size = 3
+        size = 5
         passes = 1
 
         vibrancy = 0.1696
@@ -100,19 +84,6 @@ animations {
     animation = fade, 1, 7, default
     animation = workspaces, 1, 6, default
 }
-
-# Ref https://wiki.hyprland.org/Configuring/Workspace-Rules/
-# "Smart gaps" / "No gaps when only"
-# uncomment all if you wish to use that.
-# workspace = w[t1], gapsout:0, gapsin:0
-# workspace = w[tg1], gapsout:0, gapsin:0
-# workspace = f[1], gapsout:0, gapsin:0
-# windowrulev2 = bordersize 0, floating:0, onworkspace:w[t1]
-# windowrulev2 = rounding 0, floating:0, onworkspace:w[t1]
-# windowrulev2 = bordersize 0, floating:0, onworkspace:w[tg1]
-# windowrulev2 = rounding 0, floating:0, onworkspace:w[tg1]
-# windowrulev2 = bordersize 0, floating:0, onworkspace:f[1]
-# windowrulev2 = rounding 0, floating:0, onworkspace:f[1]
 
 # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
 dwindle {
