--- a/hyprland/.config/hypr/env.conf
+++ b/hyprland/.config/hypr/env.conf
@@ -4,3 +4,11 @@ env = LIBVA_DRIVER_NAME,nvidia
 env = XDG_SESSION_TYPE,wayland
 env = GBM_BACKEND,nvidia-drm
 env = __GLX_VENDOR_LIBRARY_NAME,nvidia
+
+# allow better screensharing support
+env = XDG_CURRENT_DESKTOP,Hyprland
+env = XDG_SESSION_DESKTOP,Hyprland
+
+xwayland {
+  force_zero_scaling = true
+}
