--- a/hyprland/.config/hypr/keybinds.conf
+++ b/hyprland/.config/hypr/keybinds.conf
@@ -9,7 +9,7 @@ $mainModS = SUPER SHIFT
 $terminal = kitty
 $fileManager = dolphin
 $menu = wofi --show run
-$browser = firefox
+$browser = zen-browser
 $editor = $terminal -e nvim
 
 
