idk working on hyprland

--- a/hyprland/.config/hypr/env.conf
+++ b/hyprland/.config/hypr/env.conf
@@ -1,9 +1,22 @@
+# Cursor size
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
+
+# Nvidia things
 env = LIBVA_DRIVER_NAME,nvidia
-env = XDG_SESSION_TYPE,wayland
 env = GBM_BACKEND,nvidia-drm
 env = __GLX_VENDOR_LIBRARY_NAME,nvidia
+
+# Force all apps to use Wayland
+env = GDK_BACKEND,wayland,x11,*
+env = QT_QPA_PLATFORM,wayland;xcb
+env = QT_STYLE_OVERRIDE,kvantum
+env = SDL_VIDEODRIVER,wayland
+env = MOZ_ENABLE_WAYLAND,1
+env = ELECTRON_OZONE_PLATFORM_HINT,wayland
+env = OZONE_PLATFORM,wayland
+env = XDG_SESSION_TYPE,wayland
+
 
 # allow better screensharing support
 env = XDG_CURRENT_DESKTOP,Hyprland
@@ -12,3 +25,6 @@ env = XDG_SESSION_DESKTOP,Hyprland
 xwayland {
   force_zero_scaling = true
 }
+
+# use an XCompose file
+env = XCOMPOSEFILE, ~/.Xcompose
