--- a/hyprland/.config/hypr/looknfeel.conf
+++ b/hyprland/.config/hypr/looknfeel.conf
@@ -1,6 +1,8 @@
 general {
+# Gaps
     gaps_in = 5
     gaps_out = 20
+
     border_size = 4
     col.active_border = $mauve $pink 45deg
     col.inactive_border = $base
@@ -13,7 +15,7 @@ general {
 decoration {
 
     active_opacity = 0.97
-    inactive_opacity = 1.0
+    inactive_opacity = 0.95
 
     rounding = 5
 
