--- a/hyprland/.config/hypr/apps.conf
+++ b/hyprland/.config/hypr/apps.conf
@@ -3,3 +3,8 @@ source = ~/.config/hypr/apps/steam.conf
 source = ~/.config/hypr/apps/terminals.conf
 source = ~/.config/hypr/apps/bitwarden.conf
 source = ~/.config/hypr/apps/system.conf
+source = ~/.config/hypr/apps/hyprshot.conf
+source = ~/.config/hypr/apps/localsend.conf
+source = ~/.config/hypr/apps/qemu.conf
+source = ~/.config/hypr/apps/pip.conf
+source = ~/.config/hypr/apps/walker.conf
