--- a/hyprland/.config/hypr/autostart.conf
+++ b/hyprland/.config/hypr/autostart.conf
@@ -1,10 +1,13 @@
-#################
-### AUTOSTART ###
-#################
-
-# Autostart necessary processes (like notifications daemons, status bars, etc.)
-# Or execute your favorite apps at launch like this:
-
 # exec-once = $terminal
-exec-once = nm-applet &
-exec-once = waybar & hyprpaper
+exec-once = uwsm-app -- nm-applet
+exec-once = uwsm-app -- waybar
+exec-once = uwsm-app -- fcitx5
+exec-once = uwsm-app -- elephant
+exec-once = uwsm-app -- walker --gapplication-service
+
+# Slow app launch fix -- set systemd vars
+exec-once = systemctl --user import-environment $(env | cut -d'=' -f 1)
+exec-once = dbus-update-activation-environment --systemd --all
+
+# Cursor starts at workspace1
+exec-once = hyprctl dispatch workspace 1
