--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -5,4 +5,5 @@ source = ~/.config/hypr/themes/mocha.conf
 source = ~/.config/hypr/looknfeel.conf
 source = ~/.config/hypr/autostart.conf
 source = ~/.config/hypr/input.conf
-source = ~/.config/hypr/windowsnworkspaces.conf
+source = ~/.config/hypr/windows.conf
+source = ~/.config/hypr/workspaces.conf
