--- a/hyprland/.config/hypr/input.conf
+++ b/hyprland/.config/hypr/input.conf
@@ -6,12 +6,24 @@ input {
     kb_options = grp:alt_shift_toggle, ctrl:nocaps
     kb_rules =
 
+    repeat_rate = 40
+    repeat_delay = 600
+
+    numlock_by_default = true
+
     follow_mouse = 1
 
+    # Increase sensitivity for mouse/trackpad
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 
     touchpad {
-        natural_scroll = false
+        # Use inverse scrolling:
+        natural_scroll = true
+        # Use two-finger click instead of clicking lower-right corner for right-clicks.
+        clickfinger_behavior = true
+
+        # Control the speed of your scrolling
+        scroll_factor = 0.4
     }
 }
 
@@ -21,9 +33,9 @@ gestures {
 
 # Example per-device config
 # See https://wiki.hyprland.org/Configuring/Keywords/#per-device-input-configs for more
-device {
-    name = epic-mouse-v1
-    sensitivity = -0.5
-}
+# device {
+#    name = epic-mouse-v1
+#    sensitivity = -0.5
+# }
 
 
