--- a/hyprland/.config/hypr/keybinds.conf
+++ b/hyprland/.config/hypr/keybinds.conf
@@ -1,85 +1,19 @@
-###################
-### KEYBINDINGS ###
-###################
-
-# See https://wiki.hyprland.org/Configuring/Keywords/
-$mainMod = SUPER # Sets "Windows" key as main modifier
-$mainModS = SUPER SHIFT
-
 $terminal = kitty
-$fileManager = dolphin
+$fileManager = nautilus
 $menu = wofi --show run
 $browser = zen-browser
 $editor = $terminal -e nvim
 
 
-bind = $mainMod, RETURN, exec, $terminal
-bind = $mainMod, Q, killactive,
-bind = $mainMod Control_L, Delete, exit, # Exit the hyprland
-bind = $mainMod, E, exec, $fileManager # file manager
-bind = $mainMod, V, togglefloating,
-bind = $mainMod, P, exec, $menu
-bind = $mainMod, B, exec, $browser
-bind = $mainMod, R, pseudo, # dwindle
-bind = $mainMod SHIFT, T, togglesplit, # dwindle
+bind = SUPER Control_L, Delete, exit, # Exit the hyprland
 
-# Move focus with mainMod + [hjkl]
-bind = $mainMod, h, movefocus, l
-bind = $mainMod, l, movefocus, r
-bind = $mainMod, k, movefocus, u
-bind = $mainMod, j, movefocus, d
+bind = SUPER, RETURN, exec, $terminal
+bind = SUPER, B, exec, $browser
+bind = SUPER SHIFT, F, exec, $fileManager # file manager
 
-# Switch workspaces with mainMod + [0-9]
-bind = $mainMod, 1, workspace, 1
-bind = $mainMod, 2, workspace, 2
-bind = $mainMod, 3, workspace, 3
-bind = $mainMod, 4, workspace, 4
-bind = $mainMod, 5, workspace, 5
-bind = $mainMod, 6, workspace, 6
-bind = $mainMod, 7, workspace, 7
-bind = $mainMod, 8, workspace, 8
-bind = $mainMod, 9, workspace, 9
-bind = $mainMod, 0, workspace, 10
+bind = SUPER, SPACE, exec, hyprctl general:layout "dwindle"
+bind = SUPER SHIFT, SPACE, exec, hyprctl general:layout "master"
 
-# Move active window to a workspace with mainMod + SHIFT + [0-9]
-bind = $mainModS, 1, movetoworkspace, 1
-bind = $mainModS, 2, movetoworkspace, 2
-bind = $mainModS, 3, movetoworkspace, 3
-bind = $mainModS, 4, movetoworkspace, 4
-bind = $mainModS, 5, movetoworkspace, 5
-bind = $mainModS, 6, movetoworkspace, 6
-bind = $mainModS, 7, movetoworkspace, 7
-bind = $mainModS, 8, movetoworkspace, 8
-bind = $mainModS, 9, movetoworkspace, 9
-bind = $mainModS, 0, movetoworkspace, 10
-
-bind = $mainMod, SPACE, exec, hyprctl general:layout "dwindle"
-bind = $mainMod SHIFT, SPACE, exec, hyprctl general:layout "master"
-
-# Example special workspace (scratchpad)
-bind = $mainMod, S, togglespecialworkspace, magic
-bind = $mainMod SHIFT, S, movetoworkspace, special:magic
-
-# Moving windows
-bind = $mainModS, h, movewindow, l
-bind = $mainModS, j, movewindow, d
-bind = $mainModS, k, movewindow, u
-bind = $mainModS, l, movewindow, r
-
-# Move/resize windows with mainMod + LMB/RMB and dragging
-bindm = $mainMod, mouse:272, movewindow
-bindm = $mainMod, mouse:273, resizewindow
-
-# Resize windows with Control - [hjkl]
-bind = $mainMod Control_L, h, resizeactive, -20 0
-bind = $mainMod Control_L, j, resizeactive, 0  20
-bind = $mainMod Control_L, k, resizeactive, 0 -20
-bind = $mainMod Control_L, l, resizeactive, 20 0
-
-
-# Scroll through existing workspaces with mainMod + scroll
-bind = $mainMod, mouse_down, workspace, e+1
-bind = $mainMod, mouse_up, workspace, e-1
 
 # Laptop multimedia keys for volume and LCD brightness
 bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
@@ -93,5 +27,6 @@ bindl = , XF86AudioPause, exec, playerctl play-pause
 bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
 
-
-
+source = ~/.config/hypr/bindings/clipboard.conf
+source = ~/.config/hypr/bindings/tiling.conf
+source = ~/.config/hypr/bindings/utils.conf
