--- a/hyprland/.config/hypr/windows.conf
+++ b/hyprland/.config/hypr/windows.conf
@@ -1,12 +1,9 @@
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
-# See https://wiki.hyprland.org/Configuring/Workspace-Rules/ for workspace rules
-
-# Example windowrule v1
-# windowrule = float, ^(kitty)$
-# windowrule = opacity 0.97 0.9, class:.*
-
 # Example windowrule v2
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
+
+# Scroll nicely in the terminals
+windowrule = scrolltouchpad 1.5, class:(Alacritty|kitty)
 
 # Ignore maximize requests from apps. You'll probably like this.
 windowrulev2 = suppressevent maximize, class:.*
