--- a/hyprland/.config/hypr/autostart.conf
+++ b/hyprland/.config/hypr/autostart.conf
@@ -4,6 +4,7 @@ exec-once = uwsm-app -- waybar
 exec-once = uwsm-app -- fcitx5
 exec-once = uwsm-app -- elephant
 exec-once = uwsm-app -- walker --gapplication-service
+exec-once = uwsm-app -- hyprpaper
 
 # Slow app launch fix -- set systemd vars
 exec-once = systemctl --user import-environment $(env | cut -d'=' -f 1)
