--- a/hyprland/.config/hypr/bindings/tiling.conf
+++ b/hyprland/.config/hypr/bindings/tiling.conf
@@ -32,7 +32,7 @@ bindd = SUPER SHIFT, code:18, Move window to workspace 9, movetoworkspace, 9
 
 # Control scratchpad
 bindd = SUPER, S, Toggle scratchpad, togglespecialworkspace, scratchpad
-bindd = SUPER ALT, S, Move window to scratchpad, movetoworkspacesilent, special:scratchpad
+bindd = SUPER SHIFT, S, Move window to scratchpad, movetoworkspacesilent, special:scratchpad
 
 # Move focus with mainMod + [hjkl]
 bindd = SUPER, h, Move focus to left, movefocus, l
@@ -64,14 +64,17 @@ bindd = SUPER, G, Toggle window grouping, togglegroup
 bindd = SUPER ALT, G, Move active window out of group, moveoutofgroup
 
 # Join groups
-bindd = SUPER ALT, h, Move window to group on left, moveintogroup, l
-bindd = SUPER ALT, l, Move window to group on right, moveintogroup, r
-bindd = SUPER ALT, k, Move window to group on top, moveintogroup, u
-bindd = SUPER ALT, j, Move window to group on bottom, moveintogroup, d
+bindd = SUPER ALT, Left, Move window to group on left, moveintogroup, l
+bindd = SUPER ALT, Right, Move window to group on right, moveintogroup, r
+bindd = SUPER ALT, Up, Move window to group on top, moveintogroup, u
+bindd = SUPER ALT, Down, Move window to group on bottom, moveintogroup, d
 
 # Scroll through a set of grouped windows with SUPER + ALT + scroll
 bindd = SUPER ALT, mouse_down, Next window in group, changegroupactive, f
 bindd = SUPER ALT, mouse_up, Previous window in group, changegroupactive, b
+
+bindd = SUPER ALT, h, Next window in group, changegroupactive, f
+bindd = SUPER ALT, l, Previous window in group, changegroupactive, b
 
 # Activate window in a group by number
 bindd = SUPER ALT, 1, Switch to group window 1, changegroupactive, 1
