--- a/hyprland/.config/hypr/bindings/utils.conf
+++ b/hyprland/.config/hypr/bindings/utils.conf
@@ -1,3 +1,8 @@
+# Variables
+$menu = ~/.config/hypr/scripts/launch-walker
+$wallpaperSetter = ~/.config/hypr/scripts/set_wallpaper
+
 # Menus
-bindd = SUPER, Space, Launch apps, exec, ~/.local/bin/launch-walker
-bindd = SUPER CTRL, E, Emoji picker, exec, ~/.local/bin/launch-walker -m symbols
+bindd = SUPER, P, Launch apps, exec, $menu
+bindd = SUPER CTRL, E, Emoji picker, exec, $menu -m symbols
+bindd = SUPER ALT, W, Random wallpaper from the wallpapers directory, exec, $wallpaperSetter
