--- a/hyprland/.config/hypr/keybinds.conf
+++ b/hyprland/.config/hypr/keybinds.conf
@@ -1,31 +1,17 @@
 $terminal = kitty
 $fileManager = nautilus
-$menu = wofi --show run
 $browser = zen-browser
 $editor = $terminal -e nvim
+$passwordManager = bitwarden-desktop
 
+bind = SUPER CTRL, Delete, exit, # Exit the hyprland
 
-bind = SUPER Control_L, Delete, exit, # Exit the hyprland
-
-bind = SUPER, RETURN, exec, $terminal
-bind = SUPER, B, exec, $browser
-bind = SUPER SHIFT, F, exec, $fileManager # file manager
+bindd = SUPER, RETURN, Terminal, exec, $terminal
+bindd = SUPER, B, Web Browser, exec, $browser
+bindd = SUPER, E, File manager, exec, $fileManager # file manager
+bindd = SUPER, SLASH, Password manager, exec, $passwordManager
 
 bind = SUPER, SPACE, exec, hyprctl general:layout "dwindle"
-bind = SUPER SHIFT, SPACE, exec, hyprctl general:layout "master"
-
-
-# Laptop multimedia keys for volume and LCD brightness
-bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
-bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
-bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
-bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
-
-# Requires playerctl
-bindl = , XF86AudioNext, exec, playerctl next
-bindl = , XF86AudioPause, exec, playerctl play-pause
-bindl = , XF86AudioPlay, exec, playerctl play-pause
-bindl = , XF86AudioPrev, exec, playerctl previous
 
 source = ~/.config/hypr/bindings/clipboard.conf
 source = ~/.config/hypr/bindings/tiling.conf
