--- a/hyprland/.config/hypr/looknfeel.conf
+++ b/hyprland/.config/hypr/looknfeel.conf
@@ -1,66 +1,111 @@
-general {
-# Gaps
-    gaps_in = 5
-    gaps_out = 20
+# Variables
+$activeBorderColor = rgba(33ccffee) rgba(00ff99ee) 45deg
+$inactiveBorderColor = rgba(595959aa)
 
-    border_size = 4
-    col.active_border = $mauve $pink 45deg
-    col.inactive_border = $base
-    resize_on_border = false
-    allow_tearing = false
-    layout = dwindle
+# https://wiki.hyprland.org/Configuring/Variables/#general
+general {
+  # Gaps
+  gaps_in = 5
+  gaps_out = 20
+
+  border_size = 4
+  col.active_border = $mauve $pink 45deg
+  col.inactive_border = $base
+  resize_on_border = false
+  allow_tearing = false
+  layout = dwindle
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
 decoration {
+  rounding = 5
+  shadow {
+    enabled = true
+    range = 2
+    render_power = 3
+    color = rgba(1a1a1aee)
+  }
+# https://wiki.hyprland.org/Configuring/Variables/#blur
+  blur {
+    enabled = true
+    size = 3
+    passes = 3
 
-    active_opacity = 0.97
-    inactive_opacity = 0.95
+    vibrancy = 0.1696
+  }
+}
 
-    rounding = 5
+group {
+  col.border_active = $activeBorderColor
+  col.border_inactive = $inactiveBorderColor
+  col.border_locked_active = -1
+  col.border_locked_inactive = -1
 
+  groupbar {
+    font_size = 12
+    font_family = monospace
+    font_weight_active = ultraheavy
+    font_weight_inactive = normal
 
-    # https://wiki.hyprland.org/Configuring/Variables/#blur
-    blur {
-        enabled = true
-        size = 5
-        passes = 1
+    indicator_height = 0
+    indicator_gap = 5
+    height = 22
+    gaps_in = 5
+    gaps_out = 0
 
-        vibrancy = 0.1696
-    }
+    text_color = rgb(ffffff)
+    text_color_inactive = rgba(ffffff90)
+    col.active = rgba(00000040)
+    col.inactive = rgba(00000020)
+
+    gradients = true
+    gradient_rounding = 0
+    gradient_round_only_edges = false
+  }
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#animations
 animations {
-    enabled = true
+  enabled = true
 
-    # Default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
+# Default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
+  bezier = easeOutQuint,0.23,1,0.32,1
+  bezier = easeInOutCubic,0.65,0.05,0.36,1
+  bezier = linear,0,0,1,1
+  bezier = almostLinear,0.5,0.5,0.75,1.0
+  bezier = quick,0.15,0,0.1,1
 
-    bezier = myBezier, 0.05, 0.9, 0.1, 1.05
-
-    animation = windows, 1, 7, myBezier
-    animation = windowsOut, 1, 7, default, popin 80%
-    animation = border, 1, 10, default
-    animation = borderangle, 1, 8, default
-    animation = fade, 1, 7, default
-    animation = workspaces, 1, 6, default
+  animation = global, 1, 10, default
+  animation = border, 1, 5.39, easeOutQuint
+  animation = windows, 1, 4.79, easeOutQuint
+  animation = windowsIn, 1, 4.1, easeOutQuint, popin 87%
+  animation = windowsOut, 1, 1.49, linear, popin 87%
+  animation = fadeIn, 1, 1.73, almostLinear
+  animation = fadeOut, 1, 1.46, almostLinear
+  animation = fade, 1, 3.03, quick
+  animation = layers, 1, 3.81, easeOutQuint
+  animation = layersIn, 1, 4, easeOutQuint, fade
+  animation = layersOut, 1, 1.5, linear, fade
+  animation = fadeLayersIn, 1, 1.79, almostLinear
+  animation = fadeLayersOut, 1, 1.39, almostLinear
+  animation = workspaces, 0, 0, ease
 }
 
 # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
 dwindle {
-    pseudotile = true # Master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
-    preserve_split = true # You probably want this
-}
-
-# See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
-master {
-    new_status = master
+  pseudotile = true # Master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
+  preserve_split = true # You probably want this
+  force_split = 2 # Always split on the right
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#misc
 misc {
-    force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
-    disable_hyprland_logo = false # If true disables the random hyprland logo / anime girl background. :(
+  force_default_wallpaper = 0 # Set to 0 or 1 to disable the anime mascot wallpapers
+  disable_hyprland_logo = true # If true disables the random hyprland logo / anime girl background. :(
+  focus_on_activate = true
+  anr_missed_pings = 3
 }
 
-
+cursor {
+  hide_on_key_press = true
+}
