oh god im stealing stuff from omarchy again xd

--- a/hyprland/.config/hypr/bindings/utils.conf
+++ b/hyprland/.config/hypr/bindings/utils.conf
@@ -1,8 +1,12 @@
 # Variables
 $menu = ~/.config/hypr/scripts/launch-walker
-$wallpaperSetter = ~/.config/hypr/scripts/set_wallpaper
+$wallpaperSetter = ~/.config/hypr/scripts/set-wallpaper
 
 # Menus
 bindd = SUPER, P, Launch apps, exec, $menu
 bindd = SUPER CTRL, E, Emoji picker, exec, $menu -m symbols
 bindd = SUPER ALT, W, Random wallpaper from the wallpapers directory, exec, $wallpaperSetter
+
+# Screenshot
+bindd = SUPER CTRL, S, Take screenshot of the region, exec, hyprshot -m region -o ~/pix/ss/
+bindd = SUPER ALT, S, Take screenshot of the active window, exec, hyprshot -m window -m active -o ~/pix/ss/
