--- a/hyprland/.config/hypr/hyprpaper.conf
+++ b/hyprland/.config/hypr/hyprpaper.conf
@@ -1,2 +1,2 @@
-preload = ~/pix/wallpapers/wallhaven-1k26q1.jpg
-wallpaper= ,~/pix/wallpapers/wallhaven-1k26q1.jpg
+preload = ~/pix/wallpapers/fantasy_art_sitting.png
+wallpaper= ,~/pix/wallpapers/fantasy_art_sitting.png
