--- a/hyprland/.config/hypr/keybinds.conf
+++ b/hyprland/.config/hypr/keybinds.conf
@@ -1,8 +1,10 @@
 $terminal = kitty
 $fileManager = nautilus
-$browser = zen-browser
+$browser = ~/.config/hypr/apps.conf
+$browser = ~/.config/hypr/scripts/launch-browser
 $editor = $terminal -e nvim
 $passwordManager = bitwarden-desktop
+$launchOrFocusWebapp = ~/.config/hypr/scripts/launch-or-focus-webapp
 
 bind = SUPER CTRL, Delete, exit, # Exit the hyprland
 
@@ -11,8 +13,11 @@ bindd = SUPER, B, Web Browser, exec, $browser
 bindd = SUPER, E, File manager, exec, $fileManager # file manager
 bindd = SUPER, SLASH, Password manager, exec, $passwordManager
 
-bind = SUPER, SPACE, exec, hyprctl general:layout "dwindle"
+# Web app stuff:
+bindd = SUPER SHIFT, W, WhatsApp, exec, $launchOrFocusWebapp "WhatsApp" "https://web.whatsapp.com/"
+
 
 source = ~/.config/hypr/bindings/clipboard.conf
 source = ~/.config/hypr/bindings/tiling.conf
+source = ~/.config/hypr/bindings/media.conf
 source = ~/.config/hypr/bindings/utils.conf
