--- a/hyprland/.config/hypr/bindings/tiling.conf
+++ b/hyprland/.config/hypr/bindings/tiling.conf
@@ -4,7 +4,7 @@ bindd = SUPER, Q, Close window, killactive, # Close windows
 # Control tiling
 bindd = SUPER SHIFT, T, Toggle window split, togglesplit, # dwindle
 bindd = SUPER, R, Pseudo window, pseudo, # dwindle
-bindd = SUPER, V, Toggle window floating/tiling, togglefloating,
+bindd = SUPER, T, Toggle window floating/tiling, togglefloating,
 bindd = SUPER, F, Toggle fullscreen, fullscreen, 0
 bindd = SUPER CTRL, F, Toggle tiled fullscreen, fullscreenstate, 0 2
 
