--- a/hyprland/.config/hypr/bindings/utils.conf
+++ b/hyprland/.config/hypr/bindings/utils.conf
@@ -2,10 +2,16 @@
 $menu = ~/.config/hypr/scripts/launch-walker
 $wallpaperSetter = ~/.config/hypr/scripts/set-wallpaper
 
+
+exec-once = wl-paste --type text --watch cliphist store # Stores only text data
+exec-once = wl-paste --type image --watch cliphist store # Stores only image data
+
 # Menus
 bindd = SUPER, P, Launch apps, exec, $menu
 bindd = SUPER CTRL, E, Emoji picker, exec, $menu -m symbols
 bindd = SUPER ALT, W, Random wallpaper from the wallpapers directory, exec, $wallpaperSetter
+bindd = SUPER, V, Paste with cliphist, exec, cliphist list | walker -d | cliphist decode | wl-copy
+
 
 # Screenshot
 bindd = SUPER CTRL, S, Take screenshot of the region, exec, hyprshot -m region -o ~/pix/ss/
