--- a/hyprland/.config/hypr/autostart.conf
+++ b/hyprland/.config/hypr/autostart.conf
@@ -1,10 +1,10 @@
 # exec-once = $terminal
+exec-once = hyprpaper &
 exec-once = uwsm-app -- nm-applet
 exec-once = uwsm-app -- waybar
 exec-once = uwsm-app -- fcitx5
 exec-once = uwsm-app -- elephant
 exec-once = uwsm-app -- walker --gapplication-service
-exec-once = uwsm-app -- hyprpaper
 
 # Slow app launch fix -- set systemd vars
 exec-once = systemctl --user import-environment $(env | cut -d'=' -f 1)
