walker is too buggy

--- a/hyprland/.config/hypr/bindings/clipboard.conf
+++ b/hyprland/.config/hypr/bindings/clipboard.conf
@@ -1,2 +1,7 @@
+exec-once = wl-paste --type text --watch cliphist store # Stores only text data
+exec-once = wl-paste --type image --watch cliphist store # Stores only image data
+
 # Copy / paste
-bindd = SUPER CTRL, V, Clipboard manager, exec, launch-walker -m clipboard
+bindd = SUPER, V, Select what to copy from the clipboard history, exec, ~/.local/bin/cliphist-wofi
+# Delete from history
+bindd = SUPER CONTROL, V, Delete from the clipboard history, exec, cliphist list | wofi --dmenu | cliphist delete
