references to hypr/scripts changed to .local/bin

--- a/hyprland/.config/hypr/bindings/utils.conf
+++ b/hyprland/.config/hypr/bindings/utils.conf
@@ -1,5 +1,5 @@
 # Variables
-$wallpaperSetter = ~/.config/hypr/scripts/set-wallpaper
+$wallpaperSetter = ~/.local/bin/set-wallpaper
 $menu = wofi
 
 # Menus
