hypr/script references are being removed again

--- a/hyprland/.config/hypr/keybinds.conf
+++ b/hyprland/.config/hypr/keybinds.conf
@@ -13,7 +13,7 @@ bindd = SUPER, E, File manager, exec, $fileManager # file manager
 bindd = SUPER, SLASH, Password manager, exec, $passwordManager
 
 # Web app stuff:
-bindd = SUPER CONTROL, W, WhatsApp, exec, $launchOrFocusWebapp "WhatsApp" "https://web.whatsapp.com/"
+bindd = SUPER CTRL, W, WhatsApp, exec, $launchOrFocusWebapp "WhatsApp" "https://web.whatsapp.com/"
 
 
 source = ~/.config/hypr/bindings/clipboard.conf
