some scripts and bindings

--- a/hyprland/.config/hypr/bindings/utils.conf
+++ b/hyprland/.config/hypr/bindings/utils.conf
@@ -2,10 +2,15 @@
 $wallpaperSetter = ~/.local/bin/set-wallpaper
 $menu = wofi
 
+# Exit the hyprland
+bindd = SUPER CTRL, Delete, Exit hyprland, exit,
+
 # Menus
 bindd = SUPER, P, Launch apps, exec, $menu --show drun
-bindd = SUPER ALT, R, Random wallpaper from the wallpapers directory, exec, $wallpaperSetter
 
 # Screenshot
 bindd = SUPER CTRL, S, Take screenshot of the region, exec, hyprshot -m region -o ~/pix/ss/
 bindd = SUPER ALT, S, Take screenshot of the active window, exec, hyprshot -m window -m active -o ~/pix/ss/
+
+# Set wallpaper
+bindd = SUPER ALT, R, Random wallpaper from the wallpapers directory, exec, $wallpaperSetter
