--- a/hyprland/.config/hypr/keybinds.conf
+++ b/hyprland/.config/hypr/keybinds.conf
@@ -1,22 +1,5 @@
-$terminal = kitty
-$fileManager = nautilus
-$browser = ~/.local/bin/launch-browser
-$editor = $terminal -e nvim
-$passwordManager = bitwarden-desktop
-$launchOrFocusWebapp = ~/.local/bin/launch-or-focus-webapp
-
-bind = SUPER CTRL, Delete, exit, # Exit the hyprland
-
-bindd = SUPER, RETURN, Terminal, exec, $terminal
-bindd = SUPER, B, Web Browser, exec, $browser
-bindd = SUPER, E, File manager, exec, $fileManager # file manager
-bindd = SUPER, SLASH, Password manager, exec, $passwordManager
-
-# Web app stuff:
-bindd = SUPER CTRL, W, WhatsApp, exec, $launchOrFocusWebapp "WhatsApp" "https://web.whatsapp.com/"
-
-
 source = ~/.config/hypr/bindings/clipboard.conf
+source = ~/.config/hypr/bindings/launch.conf
 source = ~/.config/hypr/bindings/tiling.conf
 source = ~/.config/hypr/bindings/media.conf
 source = ~/.config/hypr/bindings/utils.conf
