--- a/hyprland/.config/hypr/bindings/utils.conf
+++ b/hyprland/.config/hypr/bindings/utils.conf
@@ -14,3 +14,7 @@ bindd = SUPER ALT, S, Take screenshot of the active window, exec, hyprshot -m wi
 
 # Set wallpaper
 bindd = SUPER ALT, R, Random wallpaper from the wallpapers directory, exec, $wallpaperSetter
+
+bindd = SUPER, COMMA, Dismiss last notification, exec, makoctl dismiss
+bindd = SUPER SHIFT, COMMA, Dismiss all notifications, exec, makoctl dismiss --all
+bindd = SUPER CTRL, COMMA, Toggle silencing notifications, exec, makoctl mode -t do-not-disturb && makoctl mode | grep -q 'do-not-disturb' && notify-send "Silenced notifications" || notify-send "Enabled notifications"
