still setting up the system...

--- a/hyprland/.config/hypr/bindings/utils.conf
+++ b/hyprland/.config/hypr/bindings/utils.conf
@@ -12,9 +12,18 @@ bindd = SUPER, P, Launch apps, exec, $menu --show drun
 bindd = SUPER CTRL, S, Take screenshot of the region, exec, hyprshot -m region -o ~/pix/ss/
 bindd = SUPER ALT, S, Take screenshot of the active window, exec, hyprshot -m window -m active -o ~/pix/ss/
 
+# Pick emojis
+bindd = SUPER CTRL, E, Select emojis, exec, ~/.local/bin/wofi-emoji
+
 # Set wallpaper
 bindd = SUPER ALT, R, Random wallpaper from the wallpapers directory, exec, $wallpaperSetter
 
+# Notifications
 bindd = SUPER, COMMA, Dismiss last notification, exec, makoctl dismiss
 bindd = SUPER SHIFT, COMMA, Dismiss all notifications, exec, makoctl dismiss --all
 bindd = SUPER CTRL, COMMA, Toggle silencing notifications, exec, makoctl mode -t do-not-disturb && makoctl mode | grep -q 'do-not-disturb' && notify-send "Silenced notifications" || notify-send "Enabled notifications"
+
+# Bookmark stuff
+bindd = SUPER SHIFT, B, Open the bookmarks, exec, ~/.local/bin/bookmark open
+bindd = SUPER, D, Add as a bookmark, exec, ~/.local/bin/bookmark grab
+bindd = SUPER SHIFT, D, Edit bookmarks, exec, ~/.local/bin/bookmark edit
