--- a/hyprland/.config/hypr/bindings/launch.conf
+++ b/hyprland/.config/hypr/bindings/launch.conf
@@ -13,5 +13,5 @@ bindd = SUPER, SLASH, Open Password Manager, exec, $passwordManager
 
 # Web app stuff:
 bindd = SUPER CTRL, W, Open WhatsApp, exec, $launchOrFocusWebapp "WhatsApp" "https://web.whatsapp.com/"
-bindd = SUPER, A, Open ChatGPT, exec, $launchOrFocusWebapp "ChatGPT" "https://chatgpt.com/"
+bindd = SUPER, A, Open Gemini, exec, $launchOrFocusWebapp "Gemini" "https://gemini.google.com/"
 bindd = SUPER, Y, Open Google Translate, exec, $launchOrFocusWebapp "Translate" "https://translate.google.com/"
