--- a/hyprland/.config/hypr/bindings/utils.conf
+++ b/hyprland/.config/hypr/bindings/utils.conf
@@ -3,7 +3,7 @@ $wallpaperSetter = ~/.local/bin/set-wallpaper
 $menu = wofi
 
 # Exit the hyprland
-bindd = SUPER CTRL, Delete, Exit hyprland, exit,
+bindd = SUPER CTRL, Delete, Powermenu, exec, ~/.local/bin/wofi-powermenu
 
 # Menus
 bindd = SUPER, P, Launch apps, exec, $menu --show drun
