--- a/hyprland/.config/hypr/autostart.conf
+++ b/hyprland/.config/hypr/autostart.conf
@@ -1,5 +1,6 @@
 # exec-once = $terminal
-exec-once = hyprpaper &
+exec-once = uwsm-app -- hypridle
+exec-once = uwsm-app -- hyprpaper
 exec-once = uwsm-app -- nm-applet
 exec-once = uwsm-app -- waybar
 
