stash conflict fixed

--- a/hyprland/.config/hypr/hyprpaper.conf
+++ b/hyprland/.config/hypr/hyprpaper.conf
@@ -1,2 +1,2 @@
-preload = ~/pix/wallpapers/samurai_panda.png
-wallpaper= ,~/pix/wallpapers/samurai_panda.png
+preload = ~/pix/wallpapers/kirby_30th_anniversary.jpg
+wallpaper= ,~/pix/wallpapers/kirby_30th_anniversary.jpg
