--- a/hyprland/.config/hypr/looknfeel.conf
+++ b/hyprland/.config/hypr/looknfeel.conf
@@ -1,6 +1,6 @@
 # Variables
-$activeBorderColor = rgba(33ccffee) rgba(00ff99ee) 45deg
-$inactiveBorderColor = rgba(595959aa)
+$activeBorderColor = $mauve $pink 45deg
+$inactiveBorderColor = $overlay0
 
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general {
@@ -23,7 +23,7 @@ decoration {
     enabled = true
     range = 2
     render_power = 3
-    color = rgba(1a1a1aee)
+    color = $crust
   }
 # https://wiki.hyprland.org/Configuring/Variables/#blur
   blur {
@@ -53,10 +53,10 @@ group {
     gaps_in = 5
     gaps_out = 0
 
-    text_color = rgb(ffffff)
-    text_color_inactive = rgba(ffffff90)
-    col.active = rgba(00000040)
-    col.inactive = rgba(00000020)
+    text_color = $text
+    text_color_inactive = $subtext0
+    col.active = $surface2
+    col.inactive = $base
 
     gradients = true
     gradient_rounding = 0
