+ [hyprland, gaps]: add gaps script and improve path handling

--- a/hyprland/.config/hypr/bindings/launch.conf
+++ b/hyprland/.config/hypr/bindings/launch.conf
@@ -3,7 +3,7 @@ $fileManager = nautilus
 $browser = zen-browser
 $editor = $terminal -e nvim
 $passwordManager = bitwarden-desktop
-$launchOrFocusWebapp = ~/.local/bin/launch-or-focus-webapp
+$launchOrFocusWebapp = launch-or-focus-webapp
 
 # Simple applications
 bindd = SUPER, RETURN, Open Terminal, exec, $terminal
