--- a/hyprland/.config/hypr/bindings/tiling.conf
+++ b/hyprland/.config/hypr/bindings/tiling.conf
@@ -81,3 +81,8 @@ bindd = SUPER ALT, 2, Switch to group window 2, changegroupactive, 2
 bindd = SUPER ALT, 3, Switch to group window 3, changegroupactive, 3
 bindd = SUPER ALT, 4, Switch to group window 4, changegroupactive, 4
 bindd = SUPER ALT, 5, Switch to group window 5, changegroupactive, 5
+
+# Gaps
+bindd = SUPER, equal, Increase gaps, exec, gaps inc 5
+bindd = SUPER SHIFT, equal, Decrease gaps, exec, gaps dec 5
+bindd = SUPER, 0, Reset gaps, exec, gaps reset
