--- a/hyprland/.config/hypr/bindings/utils.conf
+++ b/hyprland/.config/hypr/bindings/utils.conf
@@ -1,9 +1,9 @@
 # Variables
-$wallpaperSetter = ~/.local/bin/set-wallpaper
+$wallpaperSetter = set-wallpaper
 $menu = wofi
 
 # Exit the hyprland
-bindd = SUPER CTRL, Delete, Powermenu, exec, ~/.local/bin/wofi-powermenu
+bindd = SUPER CTRL, Delete, Powermenu, exec, wofi-powermenu
 
 # Menus
 bindd = SUPER, P, Launch apps, exec, $menu --show drun
@@ -13,7 +13,7 @@ bindd = SUPER CTRL, S, Take screenshot of the region, exec, hyprshot -m region -
 bindd = SUPER ALT, S, Take screenshot of the active window, exec, hyprshot -m window -m active -o ~/pix/ss/
 
 # Pick emojis
-bindd = SUPER CTRL, E, Select emojis, exec, ~/.local/bin/wofi-emoji
+bindd = SUPER CTRL, E, Select emojis, exec, wofi-emoji
 
 # Set wallpaper
 bindd = SUPER ALT, R, Random wallpaper from the wallpapers directory, exec, $wallpaperSetter
@@ -24,6 +24,6 @@ bindd = SUPER SHIFT, COMMA, Dismiss all notifications, exec, makoctl dismiss --a
 bindd = SUPER CTRL, COMMA, Toggle silencing notifications, exec, makoctl mode -t do-not-disturb && makoctl mode | grep -q 'do-not-disturb' && notify-send "Silenced notifications" || notify-send "Enabled notifications"
 
 # Bookmark stuff
-bindd = SUPER SHIFT, B, Open the bookmarks, exec, ~/.local/bin/bookmark open
-bindd = SUPER, D, Add as a bookmark, exec, ~/.local/bin/bookmark grab
-bindd = SUPER SHIFT, D, Edit bookmarks, exec, ~/.local/bin/bookmark edit
+bindd = SUPER SHIFT, B, Open the bookmarks, exec, bookmark open
+bindd = SUPER, D, Add as a bookmark, exec, bookmark grab
+bindd = SUPER SHIFT, D, Edit bookmarks, exec, bookmark edit
