--- a/hyprland/.config/hypr/env.conf
+++ b/hyprland/.config/hypr/env.conf
@@ -2,6 +2,8 @@
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
 
+env = PATH,$HOME/.local/bin:$PATH
+
 # Nvidia things
 env = LIBVA_DRIVER_NAME,nvidia
 env = GBM_BACKEND,nvidia-drm
