--- a/hyprland/.config/hypr/bindings/tiling.conf
+++ b/hyprland/.config/hypr/bindings/tiling.conf
@@ -84,5 +84,5 @@ bindd = SUPER ALT, 5, Switch to group window 5, changegroupactive, 5
 
 # Gaps
 bindd = SUPER, equal, Increase gaps, exec, gaps inc 5
-bindd = SUPER SHIFT, equal, Decrease gaps, exec, gaps dec 5
+bindd = SUPER, minus, Decrease gaps, exec, gaps dec 5
 bindd = SUPER, 0, Reset gaps, exec, gaps reset
