env fixed and some tweaks

--- a/hyprland/.config/hypr/bindings/launch.conf
+++ b/hyprland/.config/hypr/bindings/launch.conf
@@ -3,7 +3,6 @@ $fileManager = nautilus
 $browser = zen-browser
 $editor = $terminal -e nvim
 $passwordManager = bitwarden-desktop
-$launchOrFocusWebapp = launch-or-focus-webapp
 
 # Simple applications
 bindd = SUPER, RETURN, Open Terminal, exec, $terminal
@@ -12,6 +11,6 @@ bindd = SUPER, E, Open File Manager, exec, $fileManager # file manager
 bindd = SUPER, SLASH, Open Password Manager, exec, $passwordManager
 
 # Web app stuff:
-bindd = SUPER CTRL, W, Open WhatsApp, exec, $launchOrFocusWebapp "WhatsApp" "https://web.whatsapp.com/"
-bindd = SUPER, A, Open Gemini, exec, $launchOrFocusWebapp "Gemini" "https://gemini.google.com/"
-bindd = SUPER, Y, Open Google Translate, exec, $launchOrFocusWebapp "Translate" "https://translate.google.com/"
+bindd = SUPER CTRL, W, Open WhatsApp, exec, launch-or-focus-webapp "WhatsApp" "https://web.whatsapp.com/"
+bindd = SUPER, A, Open Gemini, exec, launch-or-focus-webapp "Gemini" "https://gemini.google.com/"
+bindd = SUPER, Y, Open Google Translate, exec, launch-or-focus-webapp "Translate" "https://translate.google.com/"
