--- a/hyprland/.config/hypr/env.conf
+++ b/hyprland/.config/hypr/env.conf
@@ -2,7 +2,7 @@
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
 
-env = PATH,$HOME/.local/bin:$HOME/.local/bin/hypr-scripts:$PATH
+env = PATH,$PATH:$HOME/.local/bin:$HOME/.local/bin/hypr-scripts
 
 # Nvidia things
 env = LIBVA_DRIVER_NAME,nvidia
