[hyprland, local, nvim]: update configs and scripts
(hyprland) : change bookmark edit keybind to super-shift-b

(hyprland) : reduce rounding for windows

(local) : refactor bookmark script for better browser support

(nvim) : change oil preview keybind to ctrl-shift-p

--- a/hyprland/.config/hypr/bindings/utils.conf
+++ b/hyprland/.config/hypr/bindings/utils.conf
@@ -26,4 +26,4 @@ bindd = SUPER CTRL, COMMA, Toggle silencing notifications, exec, makoctl mode -t
 # Bookmark stuff
 bindd = SUPER SHIFT, B, Open the bookmarks, exec, bookmark open
 bindd = SUPER, D, Add as a bookmark, exec, bookmark grab
-bindd = SUPER SHIFT, D, Edit bookmarks, exec, bookmark edit
+bindd = SUPER SHIFT, B, Edit bookmarks, exec, bookmark edit
