refactor(bookmark): replace bookmark script with dogear

--- a/hyprland/.config/hypr/bindings/utils.conf
+++ b/hyprland/.config/hypr/bindings/utils.conf
@@ -23,7 +23,7 @@ bindd = SUPER, COMMA, Dismiss last notification, exec, makoctl dismiss
 bindd = SUPER SHIFT, COMMA, Dismiss all notifications, exec, makoctl dismiss --all
 bindd = SUPER CTRL, COMMA, Toggle silencing notifications, exec, makoctl mode -t do-not-disturb && makoctl mode | grep -q 'do-not-disturb' && notify-send "Silenced notifications" || notify-send "Enabled notifications"
 
-# Bookmark stuff
-bindd = SUPER SHIFT, B, Open the bookmarks, exec, bookmark open
-bindd = SUPER, D, Add as a bookmark, exec, bookmark grab
-bindd = SUPER CTRL, B, Edit bookmarks, exec, bookmark edit
+# Dogear Bookmarks
+bind = SUPER SHIFT, B, exec, dogear list | wofi --dmenu --prompt "Bookmarks" | dogear open
+bind = SUPER, D, exec, dogear grab
+bind = SUPER CTRL, B, exec, dogear edit
