feat(wofi) : wofi without animations

--- a/hyprland/.config/hypr/apps.conf
+++ b/hyprland/.config/hypr/apps.conf
@@ -6,4 +6,5 @@ source = ~/.config/hypr/apps/system.conf
 source = ~/.config/hypr/apps/hyprshot.conf
 source = ~/.config/hypr/apps/localsend.conf
 source = ~/.config/hypr/apps/qemu.conf
+source = ~/.config/hypr/apps/wofi.conf
 # source = ~/.config/hypr/apps/pip.conf
