feat(hypr): organize scripts and update system configs
- Move launch scripts to 'hypr-scripts' folder
- Add 'launch-tui', 'launch-or-focus-tui' and 'launch-wifi' scripts
- Update Waybar network module to use new wifi script
- Re-enable wofi animations (revert noanim layerrule)

--- a/hyprland/.config/hypr/apps/wofi.conf
+++ b/hyprland/.config/hypr/apps/wofi.conf
@@ -1,5 +1,5 @@
 # Layer rules for wofi
-layerrule = noanim, wofi
+# layerrule = noanim, wofi
 
 # Window rules for wofi (if running in window mode)
 windowrule = noanim, class:^wofi$
