feat(hypr): add silent type and fix portal startup

--- a/hyprland/.config/hypr/bindings/clipboard.conf
+++ b/hyprland/.config/hypr/bindings/clipboard.conf
@@ -5,3 +5,5 @@ exec-once = wl-paste --type image --watch cliphist store # Stores only image dat
 bindd = SUPER, V, Select what to copy from the clipboard history, exec, cliphist-wofi
 # Delete from history
 bindd = SUPER CONTROL, V, Delete from the clipboard history, exec, cliphist list | wofi --dmenu | cliphist delete
+
+bindd = SUPER CONTROL, D, Paste the silent thingy, exec, type-silent
