--- a/hyprland/.config/hypr/autostart.conf
+++ b/hyprland/.config/hypr/autostart.conf
@@ -1,3 +1,11 @@
+exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+
+# 3. Kill and restart portals to ensure they pick up the Nvidia env vars
+exec-once = systemctl --user stop xdg-desktop-portal
+exec-once = systemctl --user stop xdg-desktop-portal-hyprland
+exec-once = systemctl --user start xdg-desktop-portal-hyprland
+exec-once = systemctl --user start xdg-desktop-portal
+
 # exec-once = $terminal
 exec-once = uwsm-app -- hypridle
 exec-once = uwsm-app -- hyprpaper
