style(kitty): disable cursor integration

--- a/kitty/.config/kitty/cursor.conf
+++ b/kitty/.config/kitty/cursor.conf
@@ -75,4 +75,4 @@ touch_scroll_multiplier 1.0
 #: for high precision scrolling devices on platforms such as macOS and
 #: Wayland. Use negative numbers to change scroll direction.
 
-
+shell_integration no-cursor
