ssh to my phone things

--- a/hyprland/.config/hypr/bindings/launch.conf
+++ b/hyprland/.config/hypr/bindings/launch.conf
@@ -10,7 +10,12 @@ bindd = SUPER, B, Open Web Browser, exec, $browser
 bindd = SUPER, E, Open File Manager, exec, $fileManager # file manager
 bindd = SUPER, SLASH, Open Password Manager, exec, $passwordManager
 
+# ssh to my phone
+bindd = SUPER CTRL, P, SSH to the Termux user in the network, exec, launch-or-focus-tui ssh-phone
+
 # Web app stuff:
 bindd = SUPER CTRL, W, Open WhatsApp, exec, launch-or-focus-webapp "WhatsApp" "https://web.whatsapp.com/"
 bindd = SUPER, A, Open Gemini, exec, launch-or-focus-webapp "Gemini" "https://gemini.google.com/"
 bindd = SUPER, Y, Open Google Translate, exec, launch-or-focus-webapp "Translate" "https://translate.google.com/"
+
+
