fix(hyprland) : 0.53 update broke my shit

--- a/hyprland/.config/hypr/apps/steam.conf
+++ b/hyprland/.config/hypr/apps/steam.conf
@@ -1,7 +1,7 @@
 # Float it.
-windowrule = float, class:steam
-windowrule = center, class:steam, title:Steam
-windowrule = opacity 1 1, class:steam
-windowrule = size 1100 700, class:steam, title:Steam
-windowrule = size 460 800, class:steam, title:Friends List
-windowrule = idleinhibit fullscreen, class:steam
+windowrule = float on, match:class steam
+windowrule = center on, match:class steam, match:title Steam
+windowrule = opacity 1 1 on, match:class steam
+windowrule = size 1100 700 on, match:class steam, match:title Steam
+windowrule = size 460 800 on, match:class steam, match:title Friends List
+windowrule = idle_inhibit fullscreen on, match:class steam
