--- a/hyprland/.config/hypr/apps/terminals.conf
+++ b/hyprland/.config/hypr/apps/terminals.conf
@@ -1,1 +1,1 @@
-windowrule = tag +terminal, class:(Alacritty|kitty|com.mitchellh.ghostty)
+windowrule = tag terminal on, match:class (Alacritty|kitty|com.mitchellh.ghostty)
