--- a/hyprland/.config/hypr/autostart.conf
+++ b/hyprland/.config/hypr/autostart.conf
@@ -9,7 +9,8 @@ exec-once = systemctl --user start xdg-desktop-portal
 # exec-once = $terminal
 exec-once = uwsm-app -- hypridle
 exec-once = uwsm-app -- mako
-exec-once = uwsm-app -- hyprpaper
+exec-once = uwsm-app -- awww-daemon
+exec-once = uwsm-app -- awww restore
 exec-once = uwsm-app -- nm-applet
 exec-once = uwsm-app -- waybar
 
