--- a/hyprland/.config/hypr/windows.conf
+++ b/hyprland/.config/hypr/windows.conf
@@ -1,15 +1,11 @@
-# See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
-# Example windowrule v2
-# windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
-
 # Scroll nicely in the terminals
-windowrule = scrolltouchpad 1.5, class:(Alacritty|kitty)
+windowrule = scroll_touchpad 1.5 on, match:class (Alacritty|kitty)
+windowrule = scroll_touchpad 0.2 on, match:class com.mitchellh.ghostty
 
-# Ignore maximize requests from apps. You'll probably like this.
-windowrulev2 = suppressevent maximize, class:.*
+# Ignore maximize requests - Yeni 'match:' ve aksiyon formatı
+windowrulev2 = suppress_event maximize on, match:class .*
 
-# Fix some dragging issues with XWayland
-windowrulev2 = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+# XWayland Dragging fix - 'nofocus' yerine 'no_focus' ve çoklu seçiciler
+windowrulev2 = no_focus on, match:class ^$, match:title ^$, match:xwayland 1, match:floating 1, match:fullscreen 0, match:pinned 0
 
-# App-specific tweaks:
 source = ~/.config/hypr/apps.conf
