--- a/hyprland/.config/hypr/apps/bitwarden.conf
+++ b/hyprland/.config/hypr/apps/bitwarden.conf
@@ -1,3 +1,3 @@
-windowrule = noscreenshare, class:^(Bitwarden)$
-windowrule = float, class:^(Bitwarden)$
-windowrule = monitor HDMI-A-1, class:^(Bitwarden)$
+windowrule = no_screen_share on, match:class ^(Bitwarden)$
+windowrule = float on, match:class ^(Bitwarden)$
+windowrule = monitor HDMI-A-1 on, match:class ^(Bitwarden)$
