--- a/hyprland/.config/hypr/apps/browser.conf
+++ b/hyprland/.config/hypr/apps/browser.conf
@@ -1,9 +1,9 @@
 # Browser types
-windowrule = tag +chromium-based-browser, class:((google-)?[cC]hrom(e|ium)|[bB]rave-browser|Microsoft-edge|Vivaldi-stable|helium)
-windowrule = tag +firefox-based-browser, class:([fF]irefox|zen|librewolf)
+windowrule = tag chromium-based-browser on, match:class ((google-)? [cC]hrom(e|ium)|[bB]rave-browser|Microsoft-edge|Vivaldi-stable|helium)
+windowrule = tag firefox-based-browser on, match:class ([fF]irefox|zen|librewolf)
 
-# Force chromium-based browsers into a tile to deal with --app bug
-windowrule = tile, tag:chromium-based-browser
+# Force tile
+windowrule = tile on, match:tag chromium-based-browser
 
-# Some video sites should never have opacity applied to them
-windowrule = opacity 1.0 1.0, initialTitle:((?i)(?:[a-z0-9-]+\.)*youtube\.com_/|app\.zoom\.us_/wc/home)
+# Opacity
+windowrule = opacity 1.0 1.0 on, match:initial_title ((?i)(?:[a-z0-9-]+\.)*youtube\.com_/|app\.zoom\.us_/wc/home)
