--- a/hyprland/.config/hypr/apps/system.conf
+++ b/hyprland/.config/hypr/apps/system.conf
@@ -1,14 +1,16 @@
 # Floating windows
-windowrule = float, tag:floating-window
-windowrule = center, tag:floating-window
-windowrule = size 1000 700, tag:floating-window
+windowrule = float on, match:tag floating-window
+windowrule = center on, match:tag floating-window
+windowrule = size 1000 700 on, match:tag floating-window
 
-windowrule = tag +floating-window, class:(blueberry.py|Impala|Wiremix|org.gnome.NautilusPreviewer|com.gabm.satty|Floating|About|TUI.float)
-windowrule = tag +floating-window, class:(xdg-desktop-portal-gtk|sublime_text|DesktopEditors|org.gnome.Nautilus), title:^(Open.*Files?|Open [F|f]older.*|Save.*Files?|Save.*As|Save|All Files|.*wants to [open|save].*|[C|c]hoose.*)
-windowrule = float, class:org.gnome.Calculator
+windowrule = tag floating-window on, match:class (blueberry.py|Impala|Wiremix|org.gnome.NautilusPreviewer|com.gabm.satty|Floating|About|TUI.float)
 
-# Fullscreen screensaver
-windowrule = fullscreen, class:Screensaver
+windowrule = tag floating-window on, match:class (xdg-desktop-portal-gtk|sublime_text|DesktopEditors|org.gnome.Nautilus), match:title ^(Open.*Files?|Open [F|f]older.*|Save.*Files?|Save.*As|Save|All Files|.*wants to [open|save].*|[C|c]hoose.*)
+
+windowrule = float on, match:class org.gnome.Calculator
+
+# Fullscreen
+windowrule = fullscreen on, match:class Screensaver
 
 # No transparency on media windows
-windowrule = opacity 1 1, class:^(zoom|vlc|mpv|org.kde.kdenlive|com.obsproject.Studio|com.github.PintaProject.Pinta|imv|org.gnome.NautilusPreviewer)$
+windowrule = opacity 1 1 on, match:class ^(zoom|vlc|mpv|org.kde.kdenlive|com.obsproject.Studio|com.github.PintaProject.Pinta|imv|org.gnome.NautilusPreviewer)$
