--- a/hyprland/.config/hypr/bindings/utils.conf
+++ b/hyprland/.config/hypr/bindings/utils.conf
@@ -3,7 +3,7 @@ $wallpaperSetter = set-wallpaper
 $menu = wofi
 
 # Exit the hyprland
-bindd = SUPER CTRL, Delete, Powermenu, exec, wofi-powermenu
+bindd = SUPER CTRL, Delete, Powermenu, exec, hyprctl kill hyprland
 
 # Menus
 bindd = SUPER, P, Launch apps, exec, $menu --show drun
@@ -13,7 +13,7 @@ bindd = SUPER CTRL, S, Take screenshot of the region, exec, hyprshot -m region -
 bindd = SUPER ALT, S, Take screenshot of the active window, exec, hyprshot -m window -m active -o ~/pix/ss/
 
 # Pick emojis
-bindd = SUPER CTRL, E, Select emojis, exec, wofi-emoji
+bindd = SUPER CTRL, E, Select emojis, exec, emoji-wofi
 
 # Set wallpaper
 bindd = SUPER ALT, R, Random wallpaper from the wallpapers directory, exec, $wallpaperSetter
@@ -22,9 +22,8 @@ bindd = SUPER ALT, R, Random wallpaper from the wallpapers directory, exec, $wal
 bindd = SUPER, COMMA, Dismiss last notification, exec, makoctl dismiss
 bindd = SUPER SHIFT, COMMA, Dismiss all notifications, exec, makoctl dismiss --all
 bindd = SUPER CTRL, COMMA, Toggle silencing notifications, exec, makoctl mode -t do-not-disturb && makoctl mode | grep -q 'do-not-disturb' && notify-send "Silenced notifications" || notify-send "Enabled notifications"
-bindd = SUPER SHIFT CTRL, D, Toggle DnD mode, exec, toggle-mako-dnd
 
 # Dogear Bookmarks
-bind = SUPER SHIFT, B, exec, dogear list | wofi --dmenu --prompt "Bookmarks" | dogear open
+bind = SUPER SHIFT, B, exec, dogear list | $menu --dmenu --prompt "Bookmarks" | dogear open
 bind = SUPER, D, exec, dogear grab
 bind = SUPER CTRL, B, exec, dogear edit
