feat(theme): setup gruvbox light theme

--- a/hyprland/.config/hypr/looknfeel.conf
+++ b/hyprland/.config/hypr/looknfeel.conf
@@ -1,5 +1,5 @@
 # Variables
-$activeBorderColor = $mauve $pink 45deg
+$activeBorderColor = $yellow
 $inactiveBorderColor = $overlay0
 
 # https://wiki.hyprland.org/Configuring/Variables/#general
@@ -9,7 +9,7 @@ general {
   gaps_out = 10
 
   border_size = 4
-  col.active_border = $mauve $pink 45deg
+  col.active_border = $activeBorderColor
   col.inactive_border = $base
   resize_on_border = false
   allow_tearing = false
