--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -4,7 +4,7 @@ include cursor.conf
 include mouse.conf
 include performance.conf
 
-background_opacity 0.9
+background_opacity 0.7
 
 enable_audio_bell no
 visual_bell_duration 0.0
@@ -22,16 +22,11 @@ tab_separator " ┇"
 tab_activity_symbol none
 tab_title_template "{title}"
 active_tab_title_template none
-# active_tab_foreground   #000
-# active_tab_background   #eee
 active_tab_font_style   bold-italic
-# inactive_tab_foreground #444
-# inactive_tab_background #999
 inactive_tab_font_style normal
-# tab_bar_background none
 
 
 # BEGIN_KITTY_THEME
-# Catppuccin-Mocha
+# Gruvbox Light
 include current-theme.conf
 # END_KITTY_THEME
