--- a/hyprland/.config/hypr/looknfeel.conf
+++ b/hyprland/.config/hypr/looknfeel.conf
@@ -1,6 +1,6 @@
 # Variables
 $activeBorderColor = $yellow
-$inactiveBorderColor = $overlay0
+$inactiveBorderColor = $overlay1
 
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general {
@@ -8,7 +8,7 @@ general {
   gaps_in = 5
   gaps_out = 10
 
-  border_size = 4
+  border_size = 6
   col.active_border = $activeBorderColor
   col.inactive_border = $base
   resize_on_border = false
@@ -27,7 +27,7 @@ decoration {
   }
 # https://wiki.hyprland.org/Configuring/Variables/#blur
   blur {
-    enabled = true
+    enabled = false
     size = 3
     passes = 3
 
