refactor(launching apps): we use uwsm for everything now

--- a/hyprland/.config/hypr/bindings/launch.conf
+++ b/hyprland/.config/hypr/bindings/launch.conf
@@ -1,17 +1,14 @@
 $terminal = kitty
 $fileManager = nautilus
-$browser = zen-browser
 $editor = $terminal -e nvim
 $passwordManager = bitwarden-desktop
 
 # Simple applications
-bindd = SUPER, RETURN, Open Terminal, exec, $terminal
-bindd = SUPER, B, Open Web Browser, exec, $browser
-bindd = SUPER, E, Open File Manager, exec, $fileManager # file manager
-bindd = SUPER, SLASH, Open Password Manager, exec, $passwordManager
-
-# ssh to my phone
-bindd = SUPER CTRL, P, SSH to the Termux user in the network, exec, launch-or-focus-tui ssh-phone
+bindd = SUPER, RETURN, Open Terminal, exec, uwsm-app -- $terminal
+bindd = SUPER, B, Open Web Browser, exec, launch-browser
+bindd = SUPER, E, Open File Manager, exec, uwsm-app -- $fileManager
+bindd = SUPER, SLASH, Open Password Manager, exec, uwsm-app -- $passwordManager
+bindd = SUPER, M, Open or focus Spotify, exec, launch-or-focus spotify
 
 # Web app stuff:
 bindd = SUPER CTRL, W, Open WhatsApp, exec, launch-or-focus-webapp "WhatsApp" "https://web.whatsapp.com/"
