fix(input) : now super-space switches between layouts

--- a/hyprland/.config/hypr/input.conf
+++ b/hyprland/.config/hypr/input.conf
@@ -3,7 +3,7 @@ input {
     kb_layout = us,tr
     kb_variant =
     kb_model =
-    kb_options = grp:alt_shift_toggle, ctrl:nocaps
+    kb_options = grp:win_space_toggle, ctrl:nocaps
     kb_rules =
 
     repeat_rate = 40
@@ -26,12 +26,3 @@ input {
         scroll_factor = 0.4
     }
 }
-
-# Example per-device config
-# See https://wiki.hyprland.org/Configuring/Keywords/#per-device-input-configs for more
-# device {
-#    name = epic-mouse-v1
-#    sensitivity = -0.5
-# }
-
-
