refactor(keybindings): remove unused tmux-sessionizer shortcuts

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -1,45 +1,32 @@
 unbind r
 bind r source-file ~/.config/tmux/tmux.conf
 
-
 set -g mouse on
 set -g default-terminal 'tmux-256color'
 set -g prefix C-s
 setw -g mode-keys vi
 
-set -g @catppuccin_flavor "latte" # latte, frappe, macchiato or mocha
-set -g @catppuccin_window_status_style "rounded"
+# Sessionizer by ThePrimeagen
+bind-key -r f run-shell "tmux neww ~/.local/bin/tmux-sessionizer"
+bind-key -r M-h run-shell "tmux neww tmux-sessionizer -s 0"
+bind-key -r M-j run-shell "tmux neww tmux-sessionizer -s 1"
+bind-key -r M-k run-shell "tmux neww tmux-sessionizer -s 2"
+bind-key -r M-l run-shell "tmux neww tmux-sessionizer -s 3"
+
+set -g @tmux-gruvbox "light"
 
 run ~/.config/tmux/plugins/catppuccin/tmux/catppuccin.tmux
-
 run ~/.config/tmux/plugins/tmux-gruvbox/gruvbox-tpm.tmux
-
 
 bind-key h select-pane -L
 bind-key j select-pane -D
 bind-key k select-pane -U
 bind-key l select-pane -R
 
-set-option -g status-position top
-
-set -g @tmux_gruvbox "light"
-
+# Copy-mode with vim bindings
 bind -T copy-mode-vi v send -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel
 bind P paste-buffer
 bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel
 
-# Make the status line pretty and add some modules
-# set -g status-right-length 100
-# set -g status-left-length 100
-# set -g status-left ""
-#
-# set -g status-right "#{E:@catppuccin_status_application}"
-# set -agF status-right "#{E:@catppuccin_status_cpu}"
-# set -ag status-right "#{E:@catppuccin_status_session}"
-# set -ag status-right "#{E:@catppuccin_status_uptime}"
-#
-#
-#
-# # to use the cpu module
-# run ~/.config/tmux/plugins/tmux-plugins/tmux-cpu/cpu.tmux
+set-option -g status-position top
